--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="dark">#4B3D57</color>
+    <color name="dark">#252525</color>
     <color name="gray">#ABAAAA</color>
     <color name="primary">#9747FF</color>
     <color name="error">#FF4747</color>
