--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="background">@color/white</item>
+        <item name="colorOnBackground">@color/dark</item>
     </style>
 
     <style name="Theme.PostingApp.SplashScreen" parent="Theme.SplashScreen">
