--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="dark">#4B3D57</color>
+    <color name="dark">#1F1925</color>
     <color name="gray">#ABAAAA</color>
     <color name="gray_light">#e9ecef</color>
     <color name="primary">#9747FF</color>
