--- a/feature-create-post/src/main/res/layout/view_post_publishing.xml
+++ b/feature-create-post/src/main/res/layout/view_post_publishing.xml
@@ -11,7 +11,7 @@
         style="@style/TextView.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Вконтакте-страница"
+        android:text=""
         android:textColor="@color/gray"
         android:textSize="18sp"/>
     <LinearLayout
