--- a/feature-create-post/src/main/res/layout/view_social_media.xml
+++ b/feature-create-post/src/main/res/layout/view_social_media.xml
@@ -34,8 +34,8 @@
             style="@style/TextView.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Telegram"
-            android:textColor="@color/dark"
+            android:text=""
+            android:textColor="?attr/colorOnBackground"
             android:textSize="16sp"/>
         <TextView
             android:id="@+id/tv_additional_info"
