--- a/feature-settings/src/main/res/layout/fragment_vk_settings.xml
+++ b/feature-settings/src/main/res/layout/fragment_vk_settings.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="@string/vkontakte"
-        android:textColor="@color/dark"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="26sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
