--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -32,7 +32,7 @@
 
     <style name="AuthEditText" parent="ThemeOverlay.Material3.TextInputEditText">
         <item name="fontFamily">@font/rubik_regular</item>
-        <item name="android:textColor">@color/dark</item>
+        <item name="android:textColor">?attr/colorOnBackground</item>
         <item name="android:textSize">16sp</item>
     </style>
 
@@ -84,7 +84,7 @@
         <item name="android:text">@string/hello_its_posting</item>
         <item name="android:textSize">28sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/dark</item>
+        <item name="android:textColor">?attr/colorOnBackground</item>
     </style>
 
     <style name="AuthDescription" parent="TextView.Medium">
