--- a/feature-create-post/src/main/res/layout/fragment_post_publishing.xml
+++ b/feature-create-post/src/main/res/layout/fragment_post_publishing.xml
@@ -14,8 +14,8 @@
         style="@style/TextView.SemiBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Публикация"
-        android:textColor="@color/dark"
+        android:text="@string/publication"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="26sp"
         />
 
