--- a/feature-create-post/src/main/res/layout/item_rv_post_place.xml
+++ b/feature-create-post/src/main/res/layout/item_rv_post_place.xml
@@ -11,7 +11,6 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:shapeAppearanceOverlay="@style/roundedImageView5"
-        android:src="@drawable/ava"
         />
     <LinearLayout
         android:id="@+id/layout"
@@ -27,7 +26,7 @@
             style="@style/TextView.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/dark"
+            android:textColor="?attr/colorOnBackground"
             android:text="testChannel posting"
             />
 
