--- a/feature-create-post/src/main/res/layout/view_post_publishing_item.xml
+++ b/feature-create-post/src/main/res/layout/view_post_publishing_item.xml
@@ -11,7 +11,6 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:shapeAppearanceOverlay="@style/roundedImageView20"
-        android:src="@drawable/ava"
         />
     <LinearLayout
         android:layout_width="0dp"
@@ -27,8 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:textColor="@color/dark"
-            android:text="ЫЦ-группа"
+            android:textColor="?attr/colorOnBackground"
+            android:text=""
             android:textSize="18sp"
             />
         <TextView
@@ -39,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:textColor="@color/gray"
-            android:text="Публикация..."
+            android:text="@string/publication_with_dots"
             android:textSize="16sp"
             />
     </LinearLayout>
@@ -52,7 +51,7 @@
         android:gravity="end"
         android:layout_height="wrap_content"
         android:textColor="@color/warning"
-        android:text="Успешно"
+        android:text=""
         android:textSize="16sp"
         />
 
