--- a/feature-posts-feed/src/main/res/layout/item_rv_post_in_feed.xml
+++ b/feature-posts-feed/src/main/res/layout/item_rv_post_in_feed.xml
@@ -6,8 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingHorizontal="5dp"
     android:paddingVertical="5dp"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,14 +42,13 @@
         android:layout_height="wrap_content"
         android:background="@null"
         android:inputType="textNoSuggestions|textMultiLine"
-        android:hint="Пост без текста"
+        android:hint="@string/post_without_text"
         android:paddingBottom="5dp"
         android:clickable="false"
         android:focusable="false"
         android:maxLines="5"
-        android:text="Example text in post"
         android:scrollbars="vertical"
-        android:textColor="@color/dark"/>
+        android:textColor="?attr/colorOnBackground"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_images"
 
