--- a/feature-settings/src/main/res/layout/fragment_social_media_settings.xml
+++ b/feature-settings/src/main/res/layout/fragment_social_media_settings.xml
@@ -35,7 +35,7 @@
                 android:text="@string/vkontakte"
                 android:textSize="26sp"
                 android:layout_marginBottom="5dp"
-                android:textColor="@color/dark"/>
+                android:textColor="?attr/colorOnBackground"/>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_vk_authorized"
                 android:layout_width="match_parent"
@@ -80,7 +80,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintVertical_bias="0.0"
                         android:text=""
-                        android:textColor="@color/dark"
+                        android:textColor="?attr/colorOnBackground"
                         android:textSize="16sp"/>
                     <TextView
                         android:id="@+id/tv_vk_linked_title"
@@ -91,7 +91,7 @@
                         app:layout_constraintTop_toBottomOf="@id/tv_vk_user_name"
                         app:layout_constraintStart_toStartOf="parent"
                         android:text="@string/linked_groups"
-                        android:textColor="@color/dark"
+                        android:textColor="?attr/colorOnBackground"
                         android:textSize="16sp"/>
                     <TextView
                         android:id="@+id/tv_vk_link_groups"
@@ -120,7 +120,7 @@
                     android:text="@string/account_is_unlinked"
                     android:textAlignment="center"
                     android:gravity="center"
-                    android:textColor="@color/dark"
+                    android:textColor="?attr/colorOnBackground"
                     />
 
                 <ImageView
@@ -150,7 +150,7 @@
                 android:text="@string/telegram"
                 android:textSize="26sp"
                 android:layout_marginBottom="5dp"
-                android:textColor="@color/dark"/>
+                android:textColor="?attr/colorOnBackground"/>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_tg"
                 android:layout_width="match_parent"
@@ -191,7 +191,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         android:text=""
                         app:layout_constraintVertical_bias="0.0"
-                        android:textColor="@color/dark"
+                        android:textColor="?attr/colorOnBackground"
                         android:textSize="16sp"/>
                     <TextView
                         android:id="@+id/tv_tg_linked_title"
@@ -203,7 +203,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintBottom_toTopOf="@id/tv_tg_link_groups"
                         android:text="@string/linked_groups"
-                        android:textColor="@color/dark"
+                        android:textColor="?attr/colorOnBackground"
                         android:textSize="16sp"/>
 
                     <TextView
