--- a/feature-settings/src/main/res/layout/item_rv_tg_chat.xml
+++ b/feature-settings/src/main/res/layout/item_rv_tg_chat.xml
@@ -24,17 +24,22 @@
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginStart="5dp"
-        android:textColor="@color/dark"
+        android:textColor="?attr/colorOnBackground"
         android:text="@string/chat"
         />
-    <com.google.android.material.materialswitch.MaterialSwitch
-        style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
 
+    <com.suke.widget.SwitchButton
         android:id="@+id/switcher"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:thumbTint="@color/white"
-        app:trackTint="@color/gray"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:sb_show_indicator="false"
+        app:sb_checked="false"
+        app:sb_checked_color="@color/primary"
+        app:sb_background="@color/gray_light"
         />
 
 </LinearLayout>
