--- a/feature-settings/src/main/res/layout/fragment_tg_settings.xml
+++ b/feature-settings/src/main/res/layout/fragment_tg_settings.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:text="@string/first_step_to_link_tg"
             android:textSize="14sp"
-            android:textColor="@color/dark"
+            android:textColor="?attr/colorOnBackground"
             android:layout_marginBottom="5dp"
             />
 
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:text="@string/second_step_to_link_tg"
             android:textSize="14sp"
-            android:textColor="@color/dark"
+            android:textColor="?attr/colorOnBackground"
             android:layout_marginBottom="5dp"
             />
 
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:text="@string/third_step_to_link_tg"
             android:textSize="14sp"
-            android:textColor="@color/dark"
+            android:textColor="?attr/colorOnBackground"
             android:layout_marginBottom="5dp"
             />
     </LinearLayout>
@@ -197,7 +197,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tg_you_havent_chats"
-            android:textColor="@color/dark"
+            android:textColor="?attr/colorOnBackground"
             android:layout_marginTop="5dp"
             android:textSize="16sp"
             />
