--- a/feature-settings/src/main/res/layout/fragment_vk_settings.xml
+++ b/feature-settings/src/main/res/layout/fragment_vk_settings.xml
@@ -90,7 +90,7 @@
                 app:layout_constraintEnd_toStartOf="@id/btn_unlink"
                 app:layout_constraintHorizontal_bias="0.0"
                 android:text=""
-                android:textColor="@color/dark"
+                android:textColor="?attr/colorOnBackground"
                 android:layout_marginHorizontal="10dp"/>
             <Button
                 android:id="@+id/btn_unlink"
@@ -114,7 +114,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="@string/vk_you_havent_groups"
-            android:textColor="@color/dark"
+            android:textColor="?attr/colorOnBackground"
             android:layout_marginTop="5dp"
             android:textSize="16sp"
             />
@@ -127,7 +127,6 @@
             tools:listitem="@layout/item_rv_vk_group"
             android:orientation="vertical"
             />
-
     </LinearLayout>
 
 
