--- a/feature-settings/src/main/res/layout/fragment_about.xml
+++ b/feature-settings/src/main/res/layout/fragment_about.xml
@@ -10,7 +10,7 @@
         style="@style/TextView.SemiBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="О нас"
+        android:text="@string/about_us"
         android:textSize="36sp"
         android:textColor="@color/primary"
         android:layout_marginStart="16dp"
@@ -22,7 +22,7 @@
         style="@style/TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/about_bit_text"
+        android:text="@string/about_big_text"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_marginHorizontal="16dp"
