--- a/feature-settings/src/main/res/layout/fragment_settings.xml
+++ b/feature-settings/src/main/res/layout/fragment_settings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
         android:id="@+id/tv_title"
@@ -12,21 +13,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@id/settings_items"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/settings_items"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:paddingHorizontal="8dp"/>
     <LinearLayout
         android:id="@+id/settings_items"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
         android:divider="@drawable/settings_divider"
         android:showDividers="middle"
         >
@@ -36,7 +31,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingVertical="5dp">
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="8dp"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true">
 
             <ImageView
                 android:layout_width="30dp"
@@ -56,12 +55,16 @@
                 android:layout_gravity="center_vertical"/>
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/item_proxy_settings"
+            android:id="@+id/item_feedback"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingVertical="5dp"
-            tools:ignore="UseCompoundDrawables">
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="8dp"
+            tools:ignore="UseCompoundDrawables"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true">
 
             <ImageView
                 android:layout_width="30dp"
@@ -74,7 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/rubik_medium"
-                android:text="@string/proxy_configuration"
+                android:text="@string/feedback_about_app"
                 android:textColor="?attr/colorOnBackground"
                 android:textSize="18sp"
                 android:gravity="center"/>
@@ -85,7 +88,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingVertical="5dp">
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="8dp"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true">
 
             <ImageView
                 android:layout_width="30dp"
@@ -105,4 +112,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
