--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,25 +7,19 @@
     <fragment
         android:id="@+id/initializingFragment"
         android:name="com.a1danz.feature_initialize.presentation.screens.initialize.InitializingFragment"
-        android:label="InitializingFragment" >
+        android:label="InitializingFragment">
         <action
             android:id="@+id/action_initializingFragment_to_signInFragment"
             app:destination="@id/signInFragment"
+            app:launchSingleTop="true"
             app:popUpTo="@id/initializingFragment"
-            app:popUpToInclusive="true"
-            app:launchSingleTop="true"  />
-        <action
-            android:id="@+id/action_initializingFragment_to_createPostFragment"
-            app:destination="@id/createPostFragment"
-            app:popUpTo="@id/initializingFragment"
-            app:popUpToInclusive="true"
-            app:launchSingleTop="true" />
+            app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
         android:id="@+id/signInFragment"
         android:name="com.a1danz.feature_authorization.presentation.screens.signin.SignInFragment"
-        android:label="SignInFragment" >
+        android:label="SignInFragment">
         <action
             android:id="@+id/action_signInFragment_to_signUpFragment"
             app:destination="@id/signUpFragment" />
@@ -42,14 +36,14 @@
     </fragment>
 
     <fragment
-        android:id="@id/createPostFragment"
+        android:id="@+id/createPostFragment"
         android:name="com.a1danz.feature_create_post.presentation.CreatePostFragment"
         android:label="CreatePostFragment" />
 
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.a1danz.feature_settings.presentation.screens.main.SettingsFragment"
-        android:label="SettingsFragment" >
+        android:label="SettingsFragment">
         <action
             android:id="@+id/action_settingsFragment_to_socialMediaSettingsFragment"
             app:destination="@id/socialMediaSettingsFragment"
@@ -65,7 +59,7 @@
     <fragment
         android:id="@+id/socialMediaSettingsFragment"
         android:name="com.a1danz.feature_settings.presentation.screens.social_media.SocialMediaSettingsFragment"
-        android:label="SocialMediaSettingsFragment" >
+        android:label="SocialMediaSettingsFragment">
         <action
             android:id="@+id/action_socialMediaSettingsFragment_to_vkSettingsFragment"
             app:destination="@id/vkSettingsFragment"
