--- a/feature/settings/src/main/res/layout/fragment_tg_settings.xml
+++ b/feature/settings/src/main/res/layout/fragment_tg_settings.xml
@@ -175,7 +175,8 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 android:text="@string/tg_username"
                 android:textColor="?attr/colorOnBackground"
-                android:layout_marginHorizontal="10dp"/>
+                android:layout_marginHorizontal="10dp"
+                tools:text="\@TelegramUsername"/>
             <Button
                 android:id="@+id/btn_unlink"
 
