--- a/feature/settings/src/main/res/layout/fragment_vk_settings.xml
+++ b/feature/settings/src/main/res/layout/fragment_vk_settings.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_title"
-
         style="@style/TextView.SemiBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="@string/vkontakte"
         android:textColor="?attr/colorOnBackground"
-        android:textSize="26sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="26sp" />
 
     <LinearLayout
         android:id="@+id/layout_not_linked"
-
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,7 +29,6 @@
 
         <TextView
             android:id="@+id/tv_not_authorized_title"
-
             style="@style/TextView.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -53,7 +49,6 @@
 
     <LinearLayout
         android:id="@+id/layout_authorized"
-
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -128,6 +123,4 @@
             android:orientation="vertical"
             />
     </LinearLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
