--- a/feature/posts-feed/src/main/res/layout/item_rv_post_in_feed.xml
+++ b/feature/posts-feed/src/main/res/layout/item_rv_post_in_feed.xml
@@ -9,8 +9,7 @@
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_date"
 
@@ -18,7 +17,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="12.02.2023 14:47"
+            tools:text="12.02.2023 14:47"
             android:textColor="@color/gray"/>
         <TextView
             android:id="@+id/btn_remove"
@@ -30,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="Удалить"
+            android:text="@string/remove"
             android:textSize="12sp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
